syntax = "proto3";

package users;

service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc ValidateUser(ValidateUserRequest) returns (ValidateUserResponse);
}

message User {
  string id = 1;
  string email = 2;
  string name = 3;
  string role = 4;
  bool isActive = 5;
  int64 createdAt = 6;
  int64 updatedAt = 7;
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
  string name = 3;
  string role = 4;
}

message GetUserRequest {
  string id = 1;
}

message GetUsersRequest {
  int32 page = 1;
  int32 limit = 2;
  string search = 3;
}

message UpdateUserRequest {
  string id = 1;
  string email = 2;
  string name = 3;
  string role = 4;
  bool isActive = 5;
}

message DeleteUserRequest {
  string id = 1;
}

message ValidateUserRequest {
  string email = 1;
  string password = 2;
}

message UserResponse {
  User user = 1;
  string message = 2;
  bool success = 3;
}

message GetUsersResponse {
  repeated User users = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

message ValidateUserResponse {
  bool isValid = 1;
  User user = 2;
  string message = 3;
}
